syntax = "proto3";
package userproto;
option go_package = "/userproto";
import "google/protobuf/timestamp.proto";

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  bool is_admin = 5;
  int32 status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message UserRequest {
  string id = 1;
}

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
}